--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordcloud-socket-frontend",
+  "name": "sensor-frontend",
   "license": "MIT",
   "version": "1.0.0",
   "description": "",
